--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+           <!--this is a navbar section-->
      <header>
         <nav>
             <div class="menu-container">
@@ -22,5 +23,20 @@
             </div>
         </nav>
      </header>
+    <main>
+        <section>
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h1 class="title">Better Design for your Digital Products 
+                    </h1>
+                    <p>We are a creative studio specializing in UX/UI design, development and strategy</p>
+                    <button>Explore More</button>
+                </div>
+                <div class="banner-photo">
+                    <img class="banner-img" src="./photos/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main> 
 </body>
 </html>
