--- a/index.html
+++ b/index.html
@@ -27,14 +27,27 @@
         <section>
             <div class="banner-container">
                 <div class="banner-text">
-                    <h1 class="title">Better Design for your Digital Products 
+                    <h1 class="title">Better Design for <br> your Digital <br> Products 
                     </h1>
-                    <p>We are a creative studio specializing in UX/UI design, development and strategy</p>
-                    <button>Explore More</button>
+                    <p class="description">We are a creative studio specializing in UX/UI design, development and strategy</p>
+                    <button class="btn">Explore More</button>
                 </div>
                 <div class="banner-photo">
-                    <img class="banner-img" src="./photos/banner.png" alt="">
+                    <img class="banner-img" src="./photos/banner.png">
                 </div>
+            </div>
+        </section>
+        <!--about us section-->
+        <section>
+            <h1 class="about-h1">About Us</h1>
+            <div class="about-container">
+                <div>
+                    <img class="about-img" src="./photos/section.png">
+                </div>
+                <div>
+                    <span class="about-us-heading">We grow through <br> bold & strategic creativity</span>
+                    <p class="about-us-p">Creativity can fuel your company’s growth in many ways. When creative thinking is prioritized, <br> positive feedback is received, and encouragement is given to solve problems creatively,<br> the company will see improvement. Creativity also encourages people to grow in <br>their ways of thinking. It can help employees come up with better solutions to problems,<br> expand sales opportunities, and distinguish your products and services from competitors</p>
+                    <button class="about-button">Contact Us</button>
             </div>
         </section>
     </main> 
