--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="menu-container">
                 <div class="">
-                    <img class="logo-photo" src="/photos/logo-light.png">
+                    <img class="logo-photo" src="./photos/logo-light.png">
                 </div>
                 <div class="menus">
                     <li class="item">Home-1</li>
@@ -47,9 +47,48 @@
                 <div>
                     <span class="about-us-heading">We grow through <br> bold & strategic creativity</span>
                     <p class="about-us-p">Creativity can fuel your company’s growth in many ways. When creative thinking is prioritized, <br> positive feedback is received, and encouragement is given to solve problems creatively,<br> the company will see improvement. Creativity also encourages people to grow in <br>their ways of thinking. It can help employees come up with better solutions to problems,<br> expand sales opportunities, and distinguish your products and services from competitors</p>
-                    <button class="about-button">Contact Us</button>
+                    <button  class="btn">Contact Us</button>
+            </div>
+        </section>
+        <section>
+            <div class="linear">
+                <h1 class="title about-title">Our Services</h1>
+                <div class="service-container">
+                    <div class="box-o">
+                        <img class="icon-o" src="./photos/0.png">
+                        <h2>Web development</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <button class="btn-box btn">Details</button>
+                    </div>
+                    <div class="box-o">
+                        <img class="icon-o" src="./photos/1.png">
+                        <h2>Web development</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <button class="btn-box btn">Details</button>
+                    </div>
+                    <div class="box-o">
+                        <img class="icon-o" src="./photos/2.png">
+                        <h2>Web development</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <button class="btn-box btn">Details</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main> 
+    <footer>
+        <nav>
+            <div class="footer-container">
+                <div>
+                    <img class="logo-photo" src="./photos/logo-light.png">
+                </div>
+                <div class="menus">
+                    <li class="item">Useful links</li>
+                    <li class="item">Support</li>
+                    <li class="item">Contact Information</li>
+                </div>
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
