--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <section>
             <div class="linear">
-                <h1 class="title about-title">Our Services</h1>
+                <h1 class="title">Our Services</h1>
                 <div class="service-container">
                     <div class="box-o">
                         <img class="icon-o" src="./photos/0.png">
@@ -82,11 +82,21 @@
                 <div>
                     <img class="logo-photo" src="./photos/logo-light.png">
                 </div>
-                <div class="menus">
-                    <li class="item">Useful links</li>
-                    <li class="item">Support</li>
-                    <li class="item">Contact Information</li>
+                
+                <div class="footer-item">Useful links
+                    <li class="footer-i">
+                        Refund policy <br>online <br>phone
+                    </li>
                 </div>
+                <div class="footer-item">Support
+                    <li class="footer-i">
+                        Head Office: 29 Kazi Nazrul <br> Islam Ave,Navana <br> Zohura Square, Dhaka 1200
+                    </li>
+                </div>
+                <div class="footer-item">Contact Information
+                    <li class="footer-i">Shop-255,2106, Level-03,<br> Multiplan Center, New Elephant <br>Road, Dhaka-1205.</li>
+                </div>
+                
             </div>
         </nav>
     </footer>
